--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "format": "prettier --write src/**/*.{js,jsx,json,css,md}"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.0",
+    "lodash": "^4.17.21",
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
